add sheet reading mvp

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: Leland;
+  src: url(leland.otf);
+}
+
 body {
   margin: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
